Fix z-index for flash message

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -76,6 +76,7 @@ $input-width: 60%;
   .flash {
     // top: 0;
     right: 0;
+    z-index: 100;
   }
 
   .side-bar {
